@@ -640,6 +640,7 @@ define function, begin
 617,setpanelpadding,2,0,0     #x change slice panel padding
 618,debugmenu,0               # Opens the debug menu
 619,menuitematpixel,2,0,0     # The menu item at a screen position
+620,rungame,1,0               # Run another game (string id)
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
